fix gap

--- a/privacyidea/static_new/src/app/components/conditional-access/conditional-access-edit-page/stages-list/conditional-access-stages-list.component.scss
+++ b/privacyidea/static_new/src/app/components/conditional-access/conditional-access-edit-page/stages-list/conditional-access-stages-list.component.scss
@@ -13,5 +13,4 @@
 .ca-add-button-row {
   display: flex;
   justify-content: center;
-  margin-top: 16px;
 }
